fix: size validation